@@ -129,7 +129,7 @@ class DeclarativeRecipeTest implements RewriteTest {
         Validated<Object> validation = dr.validate();
         assertThat(validation.isValid()).isFalse();
         assertThat(validation.failures().size()).isEqualTo(2);
-        assertThat(validation.failures().get(0).getProperty()).isEqualTo("initialization");
+        assertThat(validation.failures().getFirst().getProperty()).isEqualTo("initialization");
     }
 
     @Test
@@ -307,10 +307,36 @@ class DeclarativeRecipeTest implements RewriteTest {
     }
 
     @Test
+    void preconditionOnNestedDeclarative() {
+        rewriteRun(
+          spec -> spec.recipeFromYaml("""
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: org.openrewrite.PreconditionOnDeclarative
+              description: Test.
+              preconditions:
+                - org.openrewrite.text.Find:
+                    find: foo
+              recipeList:
+                - org.openrewrite.DeclarativeExample
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: org.openrewrite.DeclarativeExample
+              description: Test.
+              recipeList:
+                - org.openrewrite.text.FindAndReplace:
+                    find: foo
+                    replace: bar
+              """, "org.openrewrite.PreconditionOnDeclarative"),
+          text("foo", "bar")
+        );
+    }
+
+    @Test
     void exposesUnderlyingDataTables() {
         DeclarativeRecipe dr = new DeclarativeRecipe("org.openrewrite.DeclarativeDataTable", "declarative with data table",
           "test", emptySet(), null, URI.create("dummy"), true, Collections.emptyList());
-        dr.addUninitialized(new Find("sam", null, null, null, null, null, null));
+        dr.addUninitialized(new Find("sam", null, null, null, null, null, null, null));
         dr.initialize(List.of(), Map.of());
         assertThat(dr.getDataTableDescriptors()).anyMatch(it -> "org.openrewrite.table.TextMatches".equals(it.getName()));
     }
@@ -346,7 +372,7 @@ class DeclarativeRecipeTest implements RewriteTest {
           )
         );
         rewriteRun(
-          spec -> spec.recipe(root).cycles(10).cycles(3).expectedCyclesThatMakeChanges(3),
+          spec -> spec.recipe(root).cycles(10).cycles(3).expectedCyclesThatMakeChanges(2),
           text("1", "1+1+1")
         );
         assertThat(cycleCount).hasValue(3);
