@@ -137,7 +137,7 @@ class JavaParserTest implements RewriteTest {
               }
               """,
             spec -> spec.afterRecipe(cu ->
-              assertThat(cu.getClasses().get(0).getLeadingAnnotations()).hasSize(2))
+              assertThat(cu.getClasses().getFirst().getLeadingAnnotations()).hasSize(2))
           )
         );
     }
@@ -154,7 +154,7 @@ class JavaParserTest implements RewriteTest {
               }
               """,
             spec -> spec.afterRecipe(cu ->
-              assertThat(cu.getClasses().get(0).getLeadingAnnotations()).hasSize(2))
+              assertThat(cu.getClasses().getFirst().getLeadingAnnotations()).hasSize(2))
           )
         );
     }
@@ -330,7 +330,7 @@ class JavaParserTest implements RewriteTest {
                    */
               }
               """,
-            spec -> spec.afterRecipe(cu -> assertThat(cu.getClasses().get(0).getBody().getEnd().getComments())
+            spec -> spec.afterRecipe(cu -> assertThat(cu.getClasses().getFirst().getBody().getEnd().getComments())
               .extracting("text")
               .containsExactly(
                 """
@@ -392,6 +392,48 @@ class JavaParserTest implements RewriteTest {
             }
             """
           ));
+    }
+
+    @Test
+    @Issue("https://github.com/openrewrite/rewrite/issues/5445")
+    void parseSwitchBlock() {
+        rewriteRun(
+          java(
+            """
+            public class Foo {
+              private String foo(final int i) {
+                return switch (i) {
+                  case 200:
+                    {
+                      yield "I'm in a block";
+                    }
+                  case 250, 300 -> {
+                      yield "another block";
+                  }
+                  case 400:
+                    yield "single line yield";
+                  default:
+                    yield "default";
+                };
+              }
+              private String mapFoo(final int i) {
+                String temp;
+                switch (i) {
+                  case 100: {
+                    temp = "value in block";
+                    break;
+                  }
+                  case 200, 300-> {
+                    temp = "another value in block";
+                  }
+                  default: temp = "default value";
+                }
+                return temp;
+              }
+            }
+            """
+          )
+        );
     }
 
 }
